--- a/themes/beautifulhugo/layouts/partials/nav.html
+++ b/themes/beautifulhugo/layouts/partials/nav.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ "/" | absLangURL }}">Home</a>
+      <a class="navbar-brand" href="{{ "/" | absLangURL }}">Ana Dizin</a>
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
